--- a/css/app.scss
+++ b/css/app.scss
@@ -7,13 +7,109 @@ $orange: #fba137;
 body {
   font-family: PingFang SC !important;
   font-size: 14px;
-  > div {
+  > .activity-page, .course-page, .create-order-page, .index-page, .order-page{
     margin-bottom: 64px;
   }
 }
 
+.set-value-btn{
+ border: none;
+  font-weight: 300;
+  padding-left: 0px;
+}
 
+.text-hidden{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 
+.mb12{
+  margin-bottom: 12px;
+}
+
+.mb24{
+  margin-bottom: 24px !important;
+}
+.mb20{
+  margin-bottom: 20px !important;
+}
+.pl8{
+  padding-left: 8px;
+}
+.zf-text-content{
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-indent:1em;
+  p {
+    color: #000000;
+  }
+}
+
+//文章选卡
+.zf-article {
+
+  .mui-table-view-cell:after {
+    content: unset;
+  }
+
+  .mui-table-view-cell > a:not(.mui-btn) {
+    white-space: unset;
+  }
+
+  margin: 0px;
+  background: #FFFFFF;
+  border-radius: 8px;
+
+  .mui-card-header {
+    a {
+      color: #999999;
+    }
+  }
+
+  .mui-card-footer:before, .mui-card-header:after {
+    content: none;
+  }
+
+  .mui-card-footer {
+
+    a {
+      display: block;
+      margin: 0 auto;
+      color: $orange;
+    }
+  }
+
+  .mui-card-content {
+    .mui-card-content-inner {
+      padding-top: 0px;
+      padding-bottom: 0px;
+
+      .mui-table-view .mui-media-object {
+        max-width: 100px;
+        height: 80px;
+        line-height: 80px;
+        border-radius: 10px;
+      }
+
+      li {
+        .zf-mui-ellipsis {
+          height: 40px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+        }
+
+        a {
+          padding-left: 0px;
+          padding-right: 0px;
+        }
+      }
+    }
+  }
+}
 .pal{
   left: 20px;
 }
@@ -23,6 +119,9 @@ body {
 }
 .ml18{
   margin-left: 18px;
+}
+.pl0{
+ padding-left: 0px;
 }
 
 .c-white{
@@ -147,71 +246,6 @@ body {
 
     .mui-grid-view.mui-grid-9 .mui-table-view-cell {
       border: none;
-    }
-  }
-
-  //文章选卡
-  .zf-article {
-
-    .mui-table-view-cell:after {
-      content: unset;
-    }
-
-    .mui-table-view-cell > a:not(.mui-btn) {
-      white-space: unset;
-    }
-
-    margin: 0px;
-    background: #FFFFFF;
-    border-radius: 8px;
-
-    .mui-card-header {
-      a {
-        color: #999999;
-      }
-    }
-
-    .mui-card-footer:before, .mui-card-header:after {
-      content: none;
-    }
-
-    .mui-card-footer {
-
-      a {
-        display: block;
-        margin: 0 auto;
-        color: $orange;
-      }
-    }
-
-    .mui-card-content {
-      .mui-card-content-inner {
-        padding-top: 0px;
-        padding-bottom: 0px;
-
-        .mui-table-view .mui-media-object {
-          max-width: 100px;
-          height: 80px;
-          line-height: 80px;
-          border-radius: 10px;
-        }
-
-        li {
-          .zf-mui-ellipsis {
-            height: 40px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-          }
-
-          a {
-            padding-left: 0px;
-            padding-right: 0px;
-          }
-        }
-      }
     }
   }
 }
@@ -692,18 +726,12 @@ body {
           }
         }
       }
-
-
-
-
     }
 
     .activity-show-release-list::-webkit-scrollbar {
       display: none;
     }
   }
-
-
 }
 /*活动结束*/
 
@@ -766,3 +794,265 @@ body {
   }
 }
 /*个人中心结束*/
+
+/*中心介绍开始*/
+.introduce-page{
+  padding: 15px;
+  background: #F7F9FB;
+  min-height: 100vh;
+
+  //轮播图
+  .mui-slider {
+    img {
+      height: 150px;
+      border-radius: 10px;
+    }
+  }
+
+  .mui-card-header {
+    padding: 0px;
+
+    a {
+      color: #999999;
+    }
+  }
+
+  .mui-card-footer:before, .mui-card-header:after {
+    content: none;
+  }
+
+  .introduce-page-teacher {
+    .introduce-page-teacher-item {
+      > a > div {
+        height: 55px;
+        background: #FFFFFF;
+        border-radius: 50px;
+        img {
+          margin-top: 2.5px;
+          width: 50px;
+          height: 50px;
+          border-radius: 35px;
+          display: block;
+        }
+        h5{
+          margin-top: 10px;
+        }
+        p {
+          font-weight: 300;
+          font-size: 12px;
+          margin: 0px;
+        }
+      }
+      @media (max-width: 400px) {
+          h5{
+            width: 77px;
+          }
+          p{
+            width: 77px;
+          }
+      }
+    }
+
+    .introduce-page-teacher-item:nth-child(odd) > a > div {
+      margin-right: 4px;
+    }
+
+    .introduce-page-teacher-item:nth-child(even) > a > div {
+      margin-left: 4px;
+    }
+
+  }
+
+}
+/*中心介绍结束*/
+
+/*创建订单开始*/
+.create-order-page{
+  padding: 15px;
+  background: #F7F9FB;
+  min-height: 100vh;
+  .mui-card-header {
+    a {
+      color: #999999;
+    }
+  }
+  .mui-card{
+    margin: 0px;
+  }
+
+  .create-order-page-form {
+    border-radius: 8px;
+    .mui-card-footer:before, .mui-card-header:after {
+      content: none;
+    }
+    .mui-input-group .mui-input-row:after {
+      content: none;
+    }
+    .mui-input-group:after {
+      content: none;
+    }
+    .mui-input-group:before {
+      content: none;
+    }
+    .mui-input-row label {
+      padding-left: 15px;
+      font-size: 16px;
+      font-weight: 300;
+
+    }
+    .mui-input-row label ~ input, .mui-input-row label ~ select, .mui-input-row label ~ textarea {
+      font-size: 14px;
+      font-weight: 300;
+    }
+    .create-order-page-form-btn{
+      height: 80px;
+      button{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 120px;
+        height: 50px;
+        background: #1D8179;
+        color: #FFFFFF;
+        border-radius: 8px;
+      }
+
+    }
+  }
+}
+/*创建订单结束*/
+
+/*密码登录 and 验证码登录开始*/
+.login-password-page, .login-verification-code-page {
+  padding: 15px;
+  padding-left: 36px;
+  padding-right: 36px;
+  background: #F7F9FB;
+  min-height: 100vh;
+  .login-password-page-head{
+    text-align: center;
+    margin-top: 56px;
+    margin-bottom: 60px;
+    p {
+      font-size: 18px;
+      font-weight: 500;
+      color: #1D8179;
+      line-height: 35px;
+    }
+  }
+  .login-password-page-form{
+    input {
+      height: 48px;
+      border-radius: 10px;
+    }
+
+
+    .login-password-page-form-link{
+      overflow: hidden;
+      a{
+        color: #1D8179;
+        font-weight: normal;
+      }
+    }
+
+    .login-password-page-form-btn{
+      font-size: 18px;
+      button{
+        display: block;
+        width: 100%;
+        margin-top: 56px;
+        height: 48px;
+        background: #1D8179;
+        color: #ffffff;
+        font-size: 18px;
+        border-radius: 10px;
+        border: 1px solid #1D8179;
+
+      }
+      a{
+        color: #1D8179;
+        text-align: center;
+        line-height: 48px;
+        display: block;
+        width: 100%;
+
+        height: 48px;
+        border-radius: 10px;
+        border: 1px solid #1D8179;
+        margin-top: 20px;
+      }
+
+    }
+  }
+}
+/*密码登录 and 验证码登录结束*/
+
+/*验证码登录开始*/
+.login-verification-code-page {
+  .verification-code {
+    overflow: hidden;
+    input {
+      float: left;
+      width: 60%;
+    }
+    button {
+      float: right;
+      width: 40%;
+      height: 48px;
+      background: #1D8179;
+      border-radius: 10px;
+      color: #ffffff;
+      font-size: 16px;
+      border: none;
+    }
+  }
+}
+/*验证码登录结束*/
+
+/*忘记密码页开始*/
+.forget-password-page , .set-forget-password-page{
+  padding: 24px 16px 16px 15px;
+  background: #F7F9FB;
+  min-height: 100vh;
+
+  .forget-password-page-form{
+    input{
+      height: 48px;
+      border-radius: 10px;
+    }
+  }
+    .verification-code {
+      overflow: hidden;
+      input {
+        float: left;
+        width: 60%;
+      }
+      button {
+        float: right;
+        width: 40%;
+        height: 48px;
+        background: #1D8179;
+        border-radius: 10px;
+        color: #ffffff;
+        font-size: 16px;
+        border: none;
+      }
+    }
+
+  .forget-password-page-form-btn{
+    font-size: 18px;
+    button{
+      display: block;
+      width: 100%;
+      margin-top: 160px;
+      height: 48px;
+      background: #1D8179;
+      color: #ffffff;
+      font-size: 18px;
+      border-radius: 10px;
+      border: 1px solid #1D8179;
+    }
+  }
+
+}
+/*忘记密码页结束*/
+
